// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meter background 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-width="24"
    />
    <path
      d="M 193.5000000000 24.0066965620 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 351.3076004371 138.6606295220 A 168.0000000000 168.0000000000 0 0 0 193.5000000000 24.0066965620 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 193.5000000000 24.0066965620 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 351.3076004371 138.6606295220 A 168.0000000000 168.0000000000 0 0 0 193.5000000000 24.0066965620 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-opacity="0.2"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter basic 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter basic renders outside grommet wrapper 1`] = `
.c0 {
  max-width: 100%;
  overflow: hidden;
}

.c0 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<svg
  aria-label="Bar meter with value 20 out of 100"
  class="c0"
  height="24"
  preserveAspectRatio="none"
  viewBox="0 0 384 24"
  width="384"
>
  <path
    d="M 0,12 L 384,12"
    fill="none"
    stroke="#F2F2F2"
    stroke-linecap="square"
    stroke-opacity="0.4"
    stroke-width="24"
  />
  <path
    d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
    fill="#6FFFB0"
    stroke="none"
    stroke-width="0"
  />
</svg>
`;

exports[`Meter boundary values 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Circle meter with values 2.26, 8.04 out of 10.3"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 193.5000000000 24.0066965620 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 380.1739845737 153.8614167849 L 356.6148879389 158.4449904058 A 168.0000000000 168.0000000000 0 0 0 193.5000000000 24.0066965620 Z"
      fill="#00873D"
      stroke="#00873D"
      stroke-linecap="butt"
      stroke-width="0"
    />
    <path
      d="M 357.1878146584 161.3897747738 L 380.7469112932 156.8062011529 A 192.0000000000 192.0000000000 0 1 1 190.4997821896 0.0058611662 L 190.4998094176 24.0066982638 A 168.0000000000 168.0000000000 0 1 0 357.1878146584 161.3897747738 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter custom message on meter plural 1`] = `
.c0 {
  max-width: 100%;
  overflow: hidden;
}

.c0 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<svg
  aria-label="Bar meter with value 15 out of 100"
  class="c0"
  height="24"
  preserveAspectRatio="none"
  viewBox="0 0 384 24"
  width="384"
>
  <path
    d="M 0,12 L 384,12"
    fill="none"
    stroke="#F2F2F2"
    stroke-linecap="square"
    stroke-opacity="0.4"
    stroke-width="24"
  />
  <path
    d="M 0,24 L 0,0 L 57.6,0 L 57.6,24 Z"
    fill="#6FFFB0"
    stroke="none"
    stroke-width="0"
  />
</svg>
`;

exports[`Meter custom message on meter singular 1`] = `
.c0 {
  max-width: 100%;
  overflow: hidden;
}

.c0 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<svg
  aria-label="Pie meter with value 15 out of 100"
  class="c0"
  height="384"
  viewBox="0 0 384 384"
  width="384"
>
  <circle
    cx="192"
    cy="192"
    fill="none"
    r="96"
    stroke="#F2F2F2"
    stroke-linecap="square"
    stroke-opacity="0.4"
    stroke-width="192"
  />
  <path
    d="M 193.5000000000 189.0560842417 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 346.4448446353 77.9351501750 L 193.5000000000 189.0560842417"
    fill="#6FFFB0"
    stroke="#6FFFB0"
    stroke-linecap="butt"
    stroke-width="0"
  />
</svg>
`;

exports[`Meter custom message plural 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="bar has multiple values 8.9 and 12.4% out of a max of 100."
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 162.19718309859155,24 L 162.19718309859155,0 L 384,0 L 384,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 0,24 L 0,0 L 159.19718309859155,0 L 159.19718309859155,24 Z"
      fill="#00873D"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter custom message singular 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="circle meter value is 30% out of 100."
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 193.5000000000 24.0066965620 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 375.0608039384 249.9028674715 L 352.2346514202 242.4862009291 A 168.0000000000 168.0000000000 0 0 0 193.5000000000 24.0066965620 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter default 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with values 0 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
  </svg>
</div>
`;

exports[`Meter large circle values 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Circle meter with values 904426, 692866, 642068, 512772, 5032870 out of 7785002"
    class="c1"
    height="192"
    viewBox="0 0 192 192"
    width="192"
  >
    <circle
      cx="96"
      cy="96"
      fill="none"
      r="90"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="12"
    />
    <path
      d="M 97.5000000000 12.0133939250 L 97.5000000000 0.0117194653 A 96.0000000000 96.0000000000 0 0 1 158.8903396562 23.4685917831 L 150.8872273966 32.4123261259 A 84.0000000000 84.0000000000 0 0 0 97.5000000000 12.0133939250 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
    <path
      d="M 153.1228490274 34.4128250446 L 161.1259612870 25.4690907017 A 96.0000000000 96.0000000000 0 0 1 187.7894739312 67.8807454679 L 176.2606614660 71.2164122645 A 84.0000000000 84.0000000000 0 0 0 153.1228490274 34.4128250446 Z"
      fill="#00873D"
      stroke="#00873D"
      stroke-linecap="butt"
      stroke-width="0"
    />
    <path
      d="M 177.0944618180 74.0982132592 L 188.6232742832 70.7625464625 A 96.0000000000 96.0000000000 0 0 1 189.6664793973 117.0378382281 L 177.9990605000 114.2250947078 A 84.0000000000 84.0000000000 0 0 0 177.0944618180 74.0982132592 Z"
      fill="#3D138D"
      stroke="#3D138D"
      stroke-linecap="butt"
      stroke-width="0"
    />
    <path
      d="M 177.2959727277 117.1415424760 L 188.9633916249 119.9542859962 A 96.0000000000 96.0000000000 0 0 1 173.2988956817 152.9287337501 L 163.7475696243 145.6615224294 A 84.0000000000 84.0000000000 0 0 0 177.2959727277 117.1415424760 Z"
      fill="#00739D"
      stroke="#00739D"
      stroke-linecap="butt"
      stroke-width="0"
    />
    <path
      d="M 161.9310202723 148.0490207963 L 171.4823463298 155.3162321170 A 96.0000000000 96.0000000000 0 1 1 94.5000000000 0.0117194653 L 94.5000000000 12.0133939250 A 84.0000000000 84.0000000000 0 1 0 161.9310202723 148.0490207963 Z"
      fill="#A2423D"
      stroke="#A2423D"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter many values 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with values 5, 5, 5, 5, 5, 5, 5, 5 out of 40"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 338.625,24 L 338.625,0 L 384,0 L 384,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 290.25,24 L 290.25,0 L 335.625,0 L 335.625,24 Z"
      fill="#00873D"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 241.875,24 L 241.875,0 L 287.25,0 L 287.25,24 Z"
      fill="#3D138D"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 193.5,24 L 193.5,0 L 238.875,0 L 238.875,24 Z"
      fill="#00739D"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 145.125,24 L 145.125,0 L 190.5,0 L 190.5,24 Z"
      fill="#A2423D"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 96.75,24 L 96.75,0 L 142.125,0 L 142.125,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 48.375,24 L 48.375,0 L 93.75,0 L 93.75,24 Z"
      fill="#00873D"
      stroke="none"
      stroke-width="0"
    />
    <path
      d="M 0,24 L 0,0 L 45.375,0 L 45.375,24 Z"
      fill="#3D138D"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter reverse 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
  transform: scale(-1,1);
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter reverse circle 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
  transform: scale(-1,1);
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-width="24"
    />
    <path
      d="M 193.5000000000 24.0066965620 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 351.3076004371 138.6606295220 A 168.0000000000 168.0000000000 0 0 0 193.5000000000 24.0066965620 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter round 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
  border-radius: 24px;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

.c2 {
  max-width: 100%;
  overflow: hidden;
}

.c2 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 12,12 L 372,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="round"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 12,24 A 12,12 0 0 1 12,0 L 84,0 A 12,12 0 0 1 84,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c2"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="round"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 196.5233466556 24.0609058765 A 12.7500000000 12.7500000000 0 0 1 196.5233466556 0.0532903772 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 A 12.0000000000 12.0000000000 0 0 1 351.3076004371 138.6606295220 A 168.0000000000 168.0000000000 0 0 0 196.5233466556 24.0609058765 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c2"
    height="192"
    viewBox="0 0 384 192"
    width="384"
  >
    <path
      d="M 372.0000000000 192.0000000000 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="round"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 192.0000000000 L 0.0000000000 192.0000000000 A 192.0000000000 192.0000000000 0 0 1 36.6687370800 79.1452315598 A 12.0000000000 12.0000000000 0 0 1 56.0851449450 93.2520776149 A 168.0000000000 168.0000000000 0 0 0 24.0000000000 192.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter rtl theme 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
  transform: scale(-1,1);
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
  dir="rtl"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter single 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 25 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 96,0 L 96,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter size 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 96 24"
    width="96"
  >
    <path
      d="M 0,12 L 96,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 19.2,0 L 19.2,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 192 24"
    width="192"
  >
    <path
      d="M 0,12 L 192,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 38.4,0 L 38.4,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 768 24"
    width="768"
  >
    <path
      d="M 0,12 L 768,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 153.6,0 L 153.6,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 1152 24"
    width="1152"
  >
    <path
      d="M 0,12 L 1152,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 230.4,0 L 230.4,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M 0,12 L 24,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 4.8,0 L 4.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 288 24"
    width="100%"
  >
    <path
      d="M 0,12 L 288,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 57.6,0 L 57.6,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="96"
    viewBox="0 0 96 96"
    width="96"
  >
    <circle
      cx="48"
      cy="48"
      fill="none"
      r="36"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 49.5000000000 24.0469208660 L 49.5000000000 0.0234432248 A 48.0000000000 48.0000000000 0 0 1 93.1648914589 31.7478438504 L 70.3172065042 39.1715067055 A 24.0000000000 24.0000000000 0 0 0 49.5000000000 24.0469208660 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="192"
    viewBox="0 0 192 192"
    width="192"
  >
    <circle
      cx="96"
      cy="96"
      fill="none"
      r="84"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 97.5000000000 24.0156266958 L 97.5000000000 0.0117194653 A 96.0000000000 96.0000000000 0 0 1 186.8267541989 64.9114052795 L 163.9976818108 72.3290205451 A 72.0000000000 72.0000000000 0 0 0 97.5000000000 24.0156266958 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 193.5000000000 24.0066965620 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 351.3076004371 138.6606295220 A 168.0000000000 168.0000000000 0 0 0 193.5000000000 24.0066965620 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="768"
    viewBox="0 0 768 768"
    width="768"
  >
    <circle
      cx="384"
      cy="384"
      fill="none"
      r="372"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 385.5000000000 24.0031250136 L 385.5000000000 0.0029296987 A 384.0000000000 384.0000000000 0 0 1 748.7393904568 263.9117947123 L 725.9138483102 271.3282629329 A 360.0000000000 360.0000000000 0 0 0 385.5000000000 24.0031250136 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="1152"
    viewBox="0 0 1152 1152"
    width="1152"
  >
    <circle
      cx="576"
      cy="576"
      fill="none"
      r="564"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 577.5000000000 24.0020380472 L 577.5000000000 0.0019531283 A 576.0000000000 576.0000000000 0 0 1 1123.3431703590 396.5802300154 L 1100.5177332053 403.9966641218 A 552.0000000000 552.0000000000 0 0 0 577.5000000000 24.0020380472 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="55"
    viewBox="0 0 55 55"
    width="55"
  >
    <circle
      cx="27.5"
      cy="27.5"
      fill="none"
      r="15.5"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 29.0000000000 24.3377223398 L 29.0000000000 0.0409395645 A 27.5000000000 27.5000000000 0 0 1 53.1515928670 17.5880989014 L 30.0439792835 25.0962176876 A 3.5000000000 3.5000000000 0 0 0 29.0000000000 24.3377223398 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="100%"
    viewBox="0 0 288 288"
    width="100%"
  >
    <circle
      cx="144"
      cy="144"
      fill="none"
      r="132"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 145.5000000000 24.0093753662 L 145.5000000000 0.0078127119 A 144.0000000000 144.0000000000 0 0 1 280.4811825243 98.0773822963 L 257.6543399607 105.4942730481 A 120.0000000000 120.0000000000 0 0 0 145.5000000000 24.0093753662 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="96"
    viewBox="0 0 96 96"
    width="96"
  >
    <circle
      cx="48"
      cy="48"
      fill="none"
      r="24"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="48"
    />
    <path
      d="M 49.5000000000 45.9354271193 L 49.5000000000 0.0234432248 A 48.0000000000 48.0000000000 0 0 1 93.1648914589 31.7478438504 L 49.5000000000 45.9354271193"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="192"
    viewBox="0 0 192 192"
    width="192"
  >
    <circle
      cx="96"
      cy="96"
      fill="none"
      r="48"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="96"
    />
    <path
      d="M 97.5000000000 93.9354271193 L 97.5000000000 0.0117194653 A 96.0000000000 96.0000000000 0 0 1 186.8267541989 64.9114052795 L 97.5000000000 93.9354271193"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="96"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="192"
    />
    <path
      d="M 193.5000000000 189.9354271193 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 193.5000000000 189.9354271193"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="768"
    viewBox="0 0 768 768"
    width="768"
  >
    <circle
      cx="384"
      cy="384"
      fill="none"
      r="192"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="384"
    />
    <path
      d="M 385.5000000000 381.9354271193 L 385.5000000000 0.0029296987 A 384.0000000000 384.0000000000 0 0 1 748.7393904568 263.9117947123 L 385.5000000000 381.9354271193"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="1152"
    viewBox="0 0 1152 1152"
    width="1152"
  >
    <circle
      cx="576"
      cy="576"
      fill="none"
      r="288"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="576"
    />
    <path
      d="M 577.5000000000 573.9354271193 L 577.5000000000 0.0019531283 A 576.0000000000 576.0000000000 0 0 1 1123.3431703590 396.5802300154 L 577.5000000000 573.9354271193"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="55"
    viewBox="0 0 55 55"
    width="55"
  >
    <circle
      cx="27.5"
      cy="27.5"
      fill="none"
      r="13.75"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="27.5"
    />
    <path
      d="M 29.0000000000 25.4354271193 L 29.0000000000 0.0409395645 A 27.5000000000 27.5000000000 0 0 1 53.1515928670 17.5880989014 L 29.0000000000 25.4354271193"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="100%"
    viewBox="0 0 288 288"
    width="100%"
  >
    <circle
      cx="144"
      cy="144"
      fill="none"
      r="72"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="144"
    />
    <path
      d="M 145.5000000000 141.9354271193 L 145.5000000000 0.0078127119 A 144.0000000000 144.0000000000 0 0 1 280.4811825243 98.0773822963 L 145.5000000000 141.9354271193"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="48"
    viewBox="0 0 96 48"
    width="96"
  >
    <path
      d="M 84.0000000000 48.0000000000 A 36.0000000000 36.0000000000 0 0 0 12.0000000000 48.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 48.0000000000 L 0.0000000000 48.0000000000 A 48.0000000000 48.0000000000 0 0 1 9.1671842700 19.7863078900 L 28.5835921350 33.8931539450 A 24.0000000000 24.0000000000 0 0 0 24.0000000000 48.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="96"
    viewBox="0 0 192 96"
    width="192"
  >
    <path
      d="M 180.0000000000 96.0000000000 A 84.0000000000 84.0000000000 0 0 0 12.0000000000 96.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 96.0000000000 L 0.0000000000 96.0000000000 A 96.0000000000 96.0000000000 0 0 1 18.3343685400 39.5726157799 L 37.7507764050 53.6794618349 A 72.0000000000 72.0000000000 0 0 0 24.0000000000 96.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="192"
    viewBox="0 0 384 192"
    width="384"
  >
    <path
      d="M 372.0000000000 192.0000000000 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 192.0000000000 L 0.0000000000 192.0000000000 A 192.0000000000 192.0000000000 0 0 1 36.6687370800 79.1452315598 L 56.0851449450 93.2520776149 A 168.0000000000 168.0000000000 0 0 0 24.0000000000 192.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 768 384"
    width="768"
  >
    <path
      d="M 756.0000000000 384.0000000000 A 372.0000000000 372.0000000000 0 0 0 12.0000000000 384.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 384.0000000000 L 0.0000000000 384.0000000000 A 384.0000000000 384.0000000000 0 0 1 73.3374741600 158.2904631197 L 92.7538820250 172.3973091747 A 360.0000000000 360.0000000000 0 0 0 24.0000000000 384.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="576"
    viewBox="0 0 1152 576"
    width="1152"
  >
    <path
      d="M 1140.0000000000 576.0000000000 A 564.0000000000 564.0000000000 0 0 0 12.0000000000 576.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 576.0000000000 L 0.0000000000 576.0000000000 A 576.0000000000 576.0000000000 0 0 1 110.0062112400 237.4356946795 L 129.4226191050 251.5425407346 A 552.0000000000 552.0000000000 0 0 0 24.0000000000 576.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="27.5"
    viewBox="0 0 55 27.5"
    width="55"
  >
    <path
      d="M 43.0000000000 27.5000000000 A 15.5000000000 15.5000000000 0 0 0 12.0000000000 27.5000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 27.5000000000 L 0.0000000000 27.5000000000 A 27.5000000000 27.5000000000 0 0 1 5.2520326547 11.3359055620 L 24.6684405197 25.4427516170 A 3.5000000000 3.5000000000 0 0 0 24.0000000000 27.5000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="100%"
    viewBox="0 0 288 144"
    width="100%"
  >
    <path
      d="M 276.0000000000 144.0000000000 A 132.0000000000 132.0000000000 0 0 0 12.0000000000 144.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 144.0000000000 L 0.0000000000 144.0000000000 A 144.0000000000 144.0000000000 0 0 1 27.5015528100 59.3589236699 L 46.9179606750 73.4657697249 A 120.0000000000 120.0000000000 0 0 0 24.0000000000 144.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter thickness 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="6"
    preserveAspectRatio="none"
    viewBox="0 0 384 6"
    width="384"
  >
    <path
      d="M 0,3 L 384,3"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="6"
    />
    <path
      d="M 0,6 L 0,0 L 76.8,0 L 76.8,6 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="12"
    preserveAspectRatio="none"
    viewBox="0 0 384 12"
    width="384"
  >
    <path
      d="M 0,6 L 384,6"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="12"
    />
    <path
      d="M 0,12 L 0,0 L 76.8,0 L 76.8,12 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="48"
    preserveAspectRatio="none"
    viewBox="0 0 384 48"
    width="384"
  >
    <path
      d="M 0,24 L 384,24"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="48"
    />
    <path
      d="M 0,48 L 0,0 L 76.8,0 L 76.8,48 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="96"
    preserveAspectRatio="none"
    viewBox="0 0 384 96"
    width="384"
  >
    <path
      d="M 0,48 L 384,48"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="96"
    />
    <path
      d="M 0,96 L 0,0 L 76.8,0 L 76.8,96 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="55"
    preserveAspectRatio="none"
    viewBox="0 0 384 55"
    width="384"
  >
    <path
      d="M 0,27.5 L 384,27.5"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="55"
    />
    <path
      d="M 0,55 L 0,0 L 76.8,0 L 76.8,55 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="189"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="6"
    />
    <path
      d="M 193.5000000000 6.0060484854 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 368.4272340878 133.0981233566 A 186.0000000000 186.0000000000 0 0 0 193.5000000000 6.0060484854 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="186"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="12"
    />
    <path
      d="M 193.5000000000 12.0062501085 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 362.7207032351 134.9522876278 A 180.0000000000 180.0000000000 0 0 0 193.5000000000 12.0062501085 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 193.5000000000 24.0066965620 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 351.3076004371 138.6606295220 A 168.0000000000 168.0000000000 0 0 0 193.5000000000 24.0066965620 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="168"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="48"
    />
    <path
      d="M 193.5000000000 48.0078127119 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 328.4811825243 146.0773822963 A 144.0000000000 144.0000000000 0 0 0 193.5000000000 48.0078127119 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="144"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="96"
    />
    <path
      d="M 193.5000000000 96.0117194653 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 282.8267541989 160.9114052795 A 96.0000000000 96.0000000000 0 0 0 193.5000000000 96.0117194653 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="164.5"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="55"
    />
    <path
      d="M 193.5000000000 55.0082119249 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 321.8234072361 148.2406246206 A 137.0000000000 137.0000000000 0 0 0 193.5000000000 55.0082119249 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter type 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,24 L 0,0 L 76.8,0 L 76.8,24 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Circle meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 193.5000000000 24.0066965620 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 351.3076004371 138.6606295220 A 168.0000000000 168.0000000000 0 0 0 193.5000000000 24.0066965620 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Pie meter with value 20 out of 100"
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="96"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="192"
    />
    <path
      d="M 193.5000000000 189.9354271193 L 193.5000000000 0.0058594644 A 192.0000000000 192.0000000000 0 0 1 374.1337529553 131.2439629796 L 193.5000000000 189.9354271193"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
  <svg
    aria-label="Semicircle meter with value 20 out of 100"
    class="c1"
    height="192"
    viewBox="0 0 384 192"
    width="384"
  >
    <path
      d="M 372.0000000000 192.0000000000 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24.0000000000 192.0000000000 L 0.0000000000 192.0000000000 A 192.0000000000 192.0000000000 0 0 1 36.6687370800 79.1452315598 L 56.0851449450 93.2520776149 A 168.0000000000 168.0000000000 0 0 0 24.0000000000 192.0000000000 Z"
      fill="#6FFFB0"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="0"
    />
  </svg>
</div>
`;

exports[`Meter vertical 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    aria-label="Bar meter with value 20 out of 100"
    class="c1"
    height="384"
    preserveAspectRatio="none"
    viewBox="0 0 24 384"
    width="24"
  >
    <path
      d="M 12,0 L 12,384"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 24,384 L 0,384 L 0,307.2 L 24,307.2 Z"
      fill="#6FFFB0"
      stroke="none"
      stroke-width="0"
    />
  </svg>
</div>
`;
